MPS-34863 Out of process test execution fixed for Java 17